[project]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Fedor",email = "feodor.a.v.03@gmail.com"}
]
license = {text = "MAI"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
